done the simpler appid test model model performance mrr 0.0247

--- a/experiment/model/test/link_predict_test.ipynb
+++ b/experiment/model/test/link_predict_test.ipynb
@@ -50,7 +50,7 @@
       "socket 10.0.82.237:3306\n",
       "done init 3564 nodes from apply id\n",
       "244800\n",
-      "done init 593205 nodes from application\n"
+      "done init 615669 nodes from application\n"
      ]
     }
    ],
@@ -80,21 +80,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 229)\n",
-      "<class 'int'>\n",
-      "<class 'numpy.int64'>\n",
-      "(2, 5652)\n",
-      "<class 'int'>\n",
-      "<class 'numpy.int64'>\n",
-      "(2, 5652)\n",
-      "<class 'int'>\n",
-      "<class 'numpy.int64'>\n",
-      "(2, 25724)\n",
-      "<class 'int'>\n",
-      "<class 'numpy.int64'>\n"
+      "615670\n"
      ]
     }
    ],
+   "source": [
+    "print(gb_2019.node_count())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# importlib.reload(G)\n",
     "gb = gb_2019.get_split_appid_map('F01')\n",
